--- a/four.w/three.css
+++ b/four.w/three.css
@@ -1,52 +1,68 @@
-.box1{
-    background-color: rgb(250, 227, 202) ;
+header{
+    position: sticky;
+    top: 0;
+
+}
+nav{
+    width: 500px;
+}
+nav > ul {
+    background-color: rgb(250, 227, 202);
+    padding: 20px;
     display: flex;
     justify-content: space-evenly;
-    padding: 20px;
+    list-style-type: none;
     font-size: 20px;
     position: fixed;
     right: 0;
     left: 0;
 }
+
+
+
 a:hover {
     background-color: burlywood;
     color: rgb(132, 17, 152);
     padding: 20px;
     text-decoration: none;
 }
-.box2 {
+section.box2{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 20px;
+}    
+ .box2 > div:nth-child(2) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    height: 10px;
-    width: 10px;
-} 
+    gap: 10px;
+ } 
 
+.colored-img{
+    width: 300px;
+    border-radius: 5px;
+}
 
 .photor{
-    width: 150px;
-    height: 150px;
+   
     box-shadow: 10px 5px 5px red; 
 }
 .photoy{
-    width: 150px;
-    height: 150px;
+    
     box-shadow: 10px 5px 5px yellow;
 }
 .photog{
-    width: 150px;
-    height: 150px;
+    
     box-shadow: 10px 5px 5px green;
 }
 .photob{
-    width: 150px;
-    height: 150px;
+   
     box-shadow: 10px 5px 5px blue;
 }
 .photop{
-    width: 150px;
-    height: 150px;
+   
     box-shadow: 10px 5px 5px purple;
 }
 .box3{
